--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <service
+            android:name=".AppService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
